--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,5 +1,9 @@
 @import "~bootstrap/scss/bootstrap";
 
 body {
-    background-color: lightgreen;
+    background-color: pink;
+}
+a{
+    text-decoration: none;
+    color: black;
 }
